update vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "functions": {
-    "app/api/**/*.js": {
-      "includeFiles": "node_modules/@google/genai/**"
+    "api/**/*.js": {
+      "includeFiles": "node_modules/@google/genai/**",
+      "memory": 1024,
+      "maxDuration": 10
     }
   }
 }
