--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "@google/genai": "^1.10.0"
+    "@ai-sdk/google": "^1.2.22",
+    "@google/genai": "^1.10.0",
+    "ai": "^4.3.19"
   },
   "engines": {
     "node": "20.x"
